Production/force-app/main/default/objects/CustomerMasterConfig__mdt/CustomerMasterConfig__mdt.object-meta.xml
<CustomObject>
    <description>To store all the Customer Master configuration information</description>
    <label>CustomerMasterConfig</label>
    <pluralLabel>CustomerMasterConfigs</pluralLabel>
</CustomObject>