Production/force-app/main/default/objects/CustomerMasterConfig__mdt/fields/BCC_Email__c.field-meta.xml
<CustomField>
    <fullName>BCC_Email__c</fullName>
    <label>BCC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>