Production/force-app/main/default/objects/CustomerMasterConfig__mdt/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <label>CC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>