Production/force-app/main/default/objects/CustomerMasterConfig__mdt/fields/DailySales_Data_SOQL__c.field-meta.xml
<CustomField>
    <fullName>DailySales_Data_SOQL__c</fullName>
    <label>DailySales Data SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>