Production/force-app/main/default/objects/CustomerMasterConfig__mdt/fields/Email_Header__c.field-meta.xml
<CustomField>
    <fullName>Email_Header__c</fullName>
    <label>Email Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>