Production/force-app/main/default/objects/CustomerMasterConfig__mdt/fields/Report_Multiple_DDD_CSV_Header__c.field-meta.xml
<CustomField>
    <fullName>Report_Multiple_DDD_CSV_Header__c</fullName>
    <label>Report Multiple DDD CSV Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>