Production/force-app/main/default/objects/CustomerMasterConfig__mdt/fields/ShipTo_Information_SOQL__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Information_SOQL__c</fullName>
    <label>ShipTo Information SOQL</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>